# qcontroller

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: teensy41.conf  teensy41.overlay
include/: adc_sync.h  event_table.h  nv_controller.h  sequencer.h  usb_comm.h  xbar_routing.h
src/: adc_sync.c  event_table.c  main.c  sequencer.c  usb_comm.c  xbar_routing.c
